--- a/PWC_Task_3.0/Views/Start/Index.cshtml
+++ b/PWC_Task_3.0/Views/Start/Index.cshtml
@@ -8,11 +8,16 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
+    <title>Import</title>
 </head>
 <body>
-    <div> 
+    @*<div>
         Hello
-    </div>
+    </div>*@
+        @using (Html.BeginForm(FormMethod.Post))
+        {
+            <input type=" =submit" value="Import" formaction="@Url.Action("Chart", "Index")" />
+        }
+   
 </body>
 </html>
